<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:background="@android:color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REMOTE UNLOCKER"
            android:id="@+id/textSamsung"
            android:textSize="40sp"
            android:textColor="@android:color/white"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/promptText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/some_message"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/promptValue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/pin_code_hidden_view"
            android:textColor="#FFFF0000"
            android:textSize="40sp"
            android:layout_marginBottom="0dp"
            android:gravity="center" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/one"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/two"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/three"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/four"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/five"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/six"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/seven"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/eight"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/nine"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonC"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/Clear"
                    android:textSize="30sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/zero"
                    android:textSize="25sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/buttonVerify"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/Verify"
                    android:textSize="20sp"
                    android:background="@drawable/button_black_white"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>